--- a/templates/catalogue/movieList.html.twig
+++ b/templates/catalogue/movieList.html.twig
@@ -16,7 +16,7 @@
         <div class="row no-margin">
             <div class="col-12 text-center p-5">
                 <h1 class="custom-title">Films</h1>
-                <p class="col-12 text-center harryP"><a href="{{ path('catalogue_index') }}">Retour au catalogue</a></p>
+                <p class="col-12 text-center font-alias"><a href="{{ path('catalogue_index') }}">Retour au catalogue</a></p>
             </div>
         </div>
 
